fix horizontal scrollbar for google chrome

--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -22,6 +22,7 @@ body>footer>div {
 @media only screen and (min-width:1080px) {
     body>footer>div {
         width: 95vw;
+        flex-grow: 1;
         flex-direction: row;
         justify-content: space-around;
         gap: 30vw;
@@ -29,7 +30,7 @@ body>footer>div {
 }
 
 body>footer nav {
-    width: 100vw;
+    width: 95vw;
     display: flex;
     flex-direction: row;
     align-items: center;
