--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -51,7 +51,6 @@ header nav img {
 }
 
 header nav figure {
-    width: 100vw;
     justify-content: start;
 }
 
