--- a/assets/styles/root.css
+++ b/assets/styles/root.css
@@ -14,6 +14,10 @@
     box-sizing: border-box;
 }
 
+body {
+    width: 100%;
+}
+
 /*Button Animation*/
 .float{
     transition: .3s, color .10s;
